Add Calendar Sheet UI component template and styles

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
       <h1>Cancun International Airport (CUN)</h1>
       <h2>Departures</h2>
 
-      <p>Wednesday, September 14th 2015</p>
+      <div class="calendar-sheet" title="Wednesday, September 14th 2015">
+        <span class="month">Sep</span>
+        <span class="date">14</span>
+        <span class="day-of-week">Wed</span>
+      </div>
+
       <p>09:57</p>
 
       <table>
