Add Clock UI component

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <span class="day-of-week">Wed</span>
       </div>
 
-      <p>09:57</p>
+      <div class="clock">09:57</div>
 
       <table>
         <thead>
