--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700">
   </head>
   <body>
-    <section id="general">
-      <h1>Cancun International Airport (CUN)</h1>
-      <h2>Departures</h2>
+    <section id="top">
+      <header>
+        <h1>Departures</h1>
+        <h2>Cancun International Airport (CUN)</h2>
+      </header>
 
       <div class="calendar-sheet" title="Wednesday, September 14th 2015">
         <span class="month">Sep</span>
@@ -22,7 +24,9 @@
       </div>
 
       <div class="clock">09:57</div>
+    </section>
 
+    <section id="general">
       <table>
         <thead>
           <tr>
