--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <tbody>
           <tr class="status-ontime">
             <td class="col-airline">
-              <img src="https://upload.wikimedia.org/wikipedia/en/e/e0/United_Airlines_Logo.svg"
-                alt="United Airlines">
+              <img src="http://upload.wikimedia.org/wikipedia/en/e/e0/United_Airlines_Logo.svg"
+                alt="United Airlines" title="United Airlines">
             </td>
             <td class="col-flight">
               <span><!-- <i class="fa fa-circle"></i> --> UA-732</span>
@@ -55,7 +55,7 @@
           <tr class="status-delayed">
             <td class="col-airline">
               <img src="http://upload.wikimedia.org/wikipedia/en/b/bc/AeroM%C3%A9xico_Logo.svg"
-                alt="Aeromexico">
+                alt="Aeromexico" title="Aeromexico">
             </td>
             <td class="col-flight">
               <span><!-- <i class="fa fa-circle"></i> --> AM-1015</span>
@@ -67,8 +67,8 @@
           </tr>
           <tr class="status-boarding">
             <td class="col-airline">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/d/d0/Emirates_logo.svg"
-                alt="Emirates">
+              <img src="http://upload.wikimedia.org/wikipedia/commons/d/d0/Emirates_logo.svg"
+                alt="Emirates" title="Emirates">
             </td>
             <td class="col-flight">
               <span><!-- <i class="fa fa-circle"></i> --> UAE-231</span>
@@ -80,8 +80,8 @@
           </tr>
           <tr class="status-cancelled">
             <td class="col-airline">
-              <img src="https://upload.wikimedia.org/wikipedia/en/2/23/American_Airlines_logo_2013.svg"
-                alt="American Airlines">
+              <img src="http://upload.wikimedia.org/wikipedia/en/2/23/American_Airlines_logo_2013.svg"
+                alt="American Airlines" title="American Airlines">
             </td>
             <td class="col-flight">
               <span><!-- <i class="fa fa-circle"></i> --> AA-342</span>
@@ -90,6 +90,19 @@
             <td>15:40</td>
             <td>B5</td>
             <td class="col-status"><span>Cancelled</span></td>
+          </tr>
+          <tr class="status-ontime">
+            <td class="col-airline">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Iberia_%282013%29.svg"
+                alt="Iberia" title="Iberia">
+            </td>
+            <td class="col-flight">
+              <span><!-- <i class="fa fa-circle"></i> --> IBE-1510</span>
+            </td>
+            <td>New York (LaGuardia)</td>
+            <td>16:05</td>
+            <td>A7</td>
+            <td class="col-status"><span>On time</span></td>
           </tr>
         </tbody>
       </table>
