Add QR Code support

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <h2>Cancun International Airport (CUN)</h2>
       </header>
 
+      <a href="http://thewarpaint.github.io/airport-dashboard/" class="qr-code"></a>
+
       <div class="calendar-sheet" title="Wednesday, September 14th 2015">
         <span class="month">Sep</span>
         <span class="date">14</span>
