--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 alt="United Airlines" title="United Airlines">
             </td>
             <td class="col-flight">
-              <span><!-- <i class="fa fa-circle"></i> --> UA-732</span>
+              <span>UA-732</span>
             </td>
             <td>Guadalajara</td>
             <td>10:15</td>
@@ -60,7 +60,7 @@
                 alt="Aeromexico" title="Aeromexico">
             </td>
             <td class="col-flight">
-              <span><!-- <i class="fa fa-circle"></i> --> AM-1015</span>
+              <span>AM-1015</span>
             </td>
             <td>Mexico City</td>
             <td>12:25</td>
@@ -73,7 +73,7 @@
                 alt="Emirates" title="Emirates">
             </td>
             <td class="col-flight">
-              <span><!-- <i class="fa fa-circle"></i> --> UAE-231</span>
+              <span>UAE-231</span>
             </td>
             <td>Queretaro</td>
             <td>13:40</td>
@@ -86,7 +86,7 @@
                 alt="American Airlines" title="American Airlines">
             </td>
             <td class="col-flight">
-              <span><!-- <i class="fa fa-circle"></i> --> AA-342</span>
+              <span>AA-342</span>
             </td>
             <td>Chicago (O'Hare)</td>
             <td>15:40</td>
@@ -99,7 +99,7 @@
                 alt="Iberia" title="Iberia">
             </td>
             <td class="col-flight">
-              <span><!-- <i class="fa fa-circle"></i> --> IBE-1510</span>
+              <span>IBE-1510</span>
             </td>
             <td>New York (LaGuardia)</td>
             <td>16:05</td>
