Add styles and HTML for Flexbox-based table, add mixins for common SCSS

--- a/index.html
+++ b/index.html
@@ -108,6 +108,123 @@
           </tr>
         </tbody>
       </table>
+
+      <div class="flex-table">
+        <div class="flex-table-header flex-table-row">
+          <div class="flex-table-data col-airline">Airline</div>
+          <div class="flex-table-data col-flight">Flight</div>
+          <div class="flex-table-data col-destination">Destination</div>
+          <div class="flex-table-data col-departure">Departure</div>
+          <div class="flex-table-data col-gate">Gate</div>
+          <div class="flex-table-data col-status">Status</div>
+        </div>
+
+        <div class="flex-table-row status-ontime">
+          <div class="flex-table-data col-airline">
+            <img src="http://upload.wikimedia.org/wikipedia/en/e/e0/United_Airlines_Logo.svg"
+              alt="United Airlines" title="United Airlines">
+          </div>
+          <div class="flex-table-data col-flight">
+            <span>UA-732</span>
+          </div>
+          <div class="flex-table-data col-destination">
+            Guadalajara
+          </div>
+          <div class="flex-table-data col-departure">
+            10:15
+          </div>
+          <div class="flex-table-data col-gate">
+            B15
+          </div>
+          <div class="flex-table-data col-status">
+            <span>On time</span>
+          </div>
+        </div>
+        <div class="flex-table-row status-delayed">
+          <div class="flex-table-data col-airline">
+            <img src="http://upload.wikimedia.org/wikipedia/en/b/bc/AeroM%C3%A9xico_Logo.svg"
+              alt="Aeromexico" title="Aeromexico">
+          </div>
+          <div class="flex-table-data col-flight">
+            <span>AM-1015</span>
+          </div>
+          <div class="flex-table-data col-destination">
+            Mexico City
+          </div>
+          <div class="flex-table-data col-departure">
+            12:25
+          </div>
+          <div class="flex-table-data col-gate">
+            A1
+          </div>
+          <div class="flex-table-data col-status">
+            <span>Delayed</span>
+          </div>
+        </div>
+        <div class="flex-table-row status-boarding">
+          <div class="flex-table-data col-airline">
+            <img src="http://upload.wikimedia.org/wikipedia/commons/d/d0/Emirates_logo.svg"
+              alt="Emirates" title="Emirates">
+          </div>
+          <div class="flex-table-data col-flight">
+            <span>UAE-231</span>
+          </div>
+          <div class="flex-table-data col-destination">
+            Queretaro
+          </div>
+          <div class="flex-table-data col-departure">
+            13:40
+          </div>
+          <div class="flex-table-data col-gate">
+            A9
+          </div>
+          <div class="flex-table-data col-status">
+            <span>Boarding</span>
+          </div>
+        </div>
+        <div class="flex-table-row status-cancelled">
+          <div class="flex-table-data col-airline">
+            <img src="http://upload.wikimedia.org/wikipedia/en/2/23/American_Airlines_logo_2013.svg"
+              alt="American Airlines" title="American Airlines">
+          </div>
+          <div class="flex-table-data col-flight">
+            <span>AA-342</span>
+          </div>
+          <div class="flex-table-data col-destination">
+            Chicago (O'Hare)
+          </div>
+          <div class="flex-table-data col-departure">
+            15:40
+          </div>
+          <div class="flex-table-data col-gate">
+            B5
+          </div>
+          <div class="flex-table-data col-status">
+            <span>Cancelled</span>
+          </div>
+        </div>
+        <div class="flex-table-row status-ontime">
+          <div class="flex-table-data col-airline">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/e6/Iberia_%282013%29.svg"
+              alt="Iberia" title="Iberia">
+          </div>
+          <div class="flex-table-data col-flight">
+            <span>IBE-1510</span>
+          </div>
+          <div class="flex-table-data col-destination">
+            New York (LaGuardia)
+          </div>
+          <div class="flex-table-data col-departure">
+            16:05
+          </div>
+          <div class="flex-table-data col-gate">
+            A7
+          </div>
+          <div class="flex-table-data col-status">
+            <span>On time</span>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
