Add responsive behaviour to Flex table

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
         <span class="month">Sep</span>
         <span class="date">14</span>
         <span class="day-of-week">Wed</span>
+        <span class="full-date">Wednesday, September 14th 2015</span>
       </div>
 
       <div class="clock">09:57</div>
